# MC458_v2

./: CMakeLists.txt
source/: CMakeLists.txt
source/array_operations/: CMakeLists.txt  array_sum.cpp  array_sum.h  max_element_array.cpp  max_element_array.h
source/data_structures/: CMakeLists.txt
source/main/: CMakeLists.txt  array_sum_main.cpp  binary_conv_main.cpp  compute_pol_i_main.cpp  compute_pol_main.cpp  insertion_sort_main.cpp  linear_search_main.cpp  matrix_multiplication_main.cpp  max_element_main.cpp  merge_main.cpp  merge_sort_main.cpp  selection_sort_main.cpp
source/matrix/: CMakeLists.txt  matrix_multiplication.cpp  matrix_multiplication.h
source/numeric/: CMakeLists.txt  binary_conv.cpp  binary_conv.h  polinomial_calc_ineficiente.cpp  polinomial_calc_ineficiente.h
source/random/: CMakeLists.txt  initializa_random_matrix.h  initialize_random_array.cpp  initialize_random_array.h  initialize_random_matrix.cpp
source/searching/: CMakeLists.txt  linear_search.cpp  linear_search.h
source/sorting/: CMakeLists.txt  insertion_sort.cpp  insertion_sort.h  merge_sort.cpp  merge_sort.h  selection_sort.cpp  selection_sort.h
source/utils/: CMakeLists.txt  array_utils.cpp  array_utils.h  print_array.cpp  print_array.h  print_matrix.cpp  print_matrix.h
